# penmon

./: .gitignore  LICENSE.txt  README.md  clean.bat  eto.py  pyproject.toml  setup.cfg  setup.py
.externalToolBuilders/: .gitignore  Cleanup.launch  Upload to pypi.org.launch
.github/workflows/: tests.yaml
penmon/: __init__.py  eto.py
src/: .gitignore
src/penmon/: __init__.py  eto.py
tests/: __init__.py  bug_rs_3_20.py  error_handling.py  et0_calc.py  fao56.py  get_day_new_syntax.py  rh_mean.py  rh_mean_vs_minmax.py  test_date_parse.py  test_solar_range.py  validate_results.py
