[metadata]
name = penmon
version = 1.2
author = Sherzod RUZMETOV
author_email = sherzodr@gmail.com
description = Implementation of weather station that calculates daily ETo for a reference crop using Penman-Monteith equation
long_description = file: README.md
long_description_content_type = text/markdown
license=MIT
keywords=Penman-Monteith, ET, evapotranspiration, plant water demand, reference crop, FAO 56 , ETo
url=https://github.com/sherzodr/penmon
download_url=https://github.com/sherzodr/penmon/archive/1.0.tar.gz
project_urls =
    Bug Tracker = https://github.com/sherzodr/penmon/issues
classifiers =
	Intended Audience :: Science/Research,
	Topic :: Scientific/Engineering :: Hydrology,
	Topic :: Scientific/Engineering :: Atmospheric Science

[options]
python_requires = >=3.6

[options.packages.find]
where = src
