[metadata]
name = penmon
version = 0.5.0
author = Sherzod RUZMETOV
author_email = sherzodr@gmail.com
description = Implementation of weather station that calculates daily ETo for a reference crop using Penman-Monteith equation
long_description = file: README.md
long_description_content_type = text/markdown
url=https://github.com/sherzodr/penmon
download_url=https://github.com/sherzodr/penmon/archive/1.5.tar.gz
license = MIT
keywords=Penman-Monteith, ET, evapotranspiration, plant water demand, reference crop, FAO 56 , ETo
project_urls =
    Bug Tracker = https://github.com/sherzodr/penmon/issues
classifiers =
	Intended Audience :: Science/Research
	Topic :: Scientific/Engineering :: Hydrology

[options]
platforms = any
python_requires = >=3.7
packages = find:
include_package_data = True

[options.packages.find]
where = penmon

[bdist_wheel]
universal = 1
